[package]
name = "pather"
version = "0.1.0"
authors = ["Las <las@protonmail.ch>"]
edition = "2018"
license = "MIT"

[dependencies]
warp = { version = "0.2.3", optional = true }
base64 = { version = "0.12", optional = true }
serde = { version = "1.0.114", optional = true }
bincode = { version = "1.3.1", optional = true }

[features]
base64helper = ["base64", "serde", "bincode"]
